# vs-imwri

./: README.md  meson.build  meson_options.txt
.github/workflows/: windows.yml
docs/: imwri.rst
src/: imwri.cpp
